[project]
name = "llm-agent"
version = "0.1.0"
description = "智能体"
authors = [
    {name = "huangrx",email = "huang.rx.life@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "click (==8.1.8)",
    "fastapi (==0.115.11)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "setuptools (==75.8.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.0)",
    "typing-extensions (==4.12.2)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "wheel (==0.45.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
