[project]
name = "llm-agent"
version = "0.1.0"
description = "智能体"
authors = [
    { name = "huangrx", email = "huang.rx.life@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "click (==8.1.8)",
    "fastapi (==0.115.11)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "setuptools (==75.8.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.0)",
    "typing-extensions (==4.12.2)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "wheel (==0.45.1)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "rapidocr-onnxruntime (>=1.4.4,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "unstructured (>=0.16.23,<0.17.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "filelock (>=3.17.0,<4.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.5.1+cu121-cp312-cp312-win_amd64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.20.1+cu121-cp312-cp312-win_amd64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.5.1+cu121-cp312-cp312-win_amd64.whl"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false